# ANNOTE

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
src/: main.py
src/annote/: __init__.py  labels_file_example.json  main.py
src/annote/helpers/: audio_player.py  data_handler.py  data_loading.py
src/annote/widgets/: annotate_precise_widget.py  annotation_statistics_widget.py  import_widget.py  labels_file_widget.py  player_controls.py  player_widgets.py  table_widget.py
src/helpers/: __init__.py  audio_player.py  calculate_md5_hash.py  data_handler.py  data_loading.py  region_item.py
src/widgets/: __init__.py  annotate_buttons_widget.py  annotate_precise_widget.py  annotation_statistics_widget.py  import_widget.py  labels_file_widget.py  player_controls.py  player_widgets.py  table_widget.py
