[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "annote"
version = '1.0.0'
description = 'The ANNOTE GUI Python package'
authors = [{ name = "René Groh", email = "rene.groh@fau.de" }]
readme = "README.md"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
keywords = ["annotation", "labelling"]
dependencies = [
    "pyqtgraph>=0.10.0",
    "numpy>=1.23.5",
    "flammkuchen>=1.0.2",
    "pyqt6>=6.5.1",
    "scipy>=1.10.1",
    "pandas>=2.0.3",
    "librosa>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/rgroh1996/ANNOTE"
Source = "https://github.com/rgroh1996/ANNOTE"
Tracker = "https://github.com/rgroh1996/ANNOTE/issues"

[project.gui-scripts]
annote = "src.main:main"

# [tool.setuptools.package-dir]
# mypkg = "lib"
